--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         position: relative;
         width: 100vw;
         height: 100vh;
+        width: 923px !important;
+        height: 923px !important;
     }
 
     .red {
