--- a/index.html
+++ b/index.html
@@ -20,17 +20,35 @@
 <style>
     * {
         background-color: black;
+
+    }
+
+    .content,
+    .red,
+    .b1,
+    .t1,
+    .t2 {
+
         -webkit-transition: all 5s ease;
         -o-transition: all 5s ease;
         transition: all 5s ease;
+    }
+
+    body {
+        -webkit-transition: all .1s ease;
+        -o-transition: all .1s ease;
+        transition: all .1s ease;
     }
 
     .content {
         position: relative;
         width: 100vw;
         height: 100vh;
-        width: 923px !important;
-        height: 923px !important;
+        max-width: 923px !important;
+        max-height: 923px !important;
+        margin: 0 auto;
+        min-width: 922px !important;
+        min-height: 922px !important;
     }
 
     .red {
@@ -57,7 +75,29 @@
         width: 100px;
         height: 120px;
     }
+
+    .bit {
+        animation: bitAnimation 2s infinite;
+    }
+
+    @keyframes bitAnimation {
+        from {
+            transform: scale(1);
+        }
+
+        to {
+            transform: scale(1.1);
+        }
+    }
+
+    audio {
+        display: none;
+    }
 </style>
+<audio controls>
+    <source src="statict\imgs\Som de coração batendo (mp3cut.net).mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
 <script src="./main.js">
 </script>
 
